--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Book Catalog</title>
+  <title>Books Catalogue</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Book Catalog</h1>
+    <h1>WNC CRL Books Catalogue</h1>
     <input type="text" id="searchTitle" placeholder="Search by Title" onkeyup="searchBooks()">
     <input type="text" id="searchAuthor" placeholder="Search by Author" onkeyup="searchBooks()">
     <table>
